5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1613_1800.log
== SUBMITION (2019-03-31 16:01:34) 
-- CODE:
a=float(input("digite um numero"))
b=float(input("digite um numero"))
c=float(input("digite um num"))
total=(a*a+b*b+c*c/a+b+C)
print(round( total,7))
-- EXECUTION TIME:
0.164863
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/1800/main.py", line 4, in <module>
    total=(a*a+b*b+c*c/a+b+C)
NameError: name 'C' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 16:01:44) 
-- CODE:
a=float(input("digite um numero"))
b=float(input("digite um numero"))
c=float(input("digite um num"))
total=(a*a+b*b+c*c/a+b+C)
print(round( total,7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total=(a*a+b*b+c*c/a+b+C)
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 16:02:13) 
-- CODE:
a=float(input("digite um numero"))
b=float(input("digite um numero"))
c=float(input("digite um num"))
total=(a*a+b*b+c*c/a+b+C)
print(round( total,7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total=(a*a+b*b+c*c/a+b+C)
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 16:04:54) 
-- CODE:
a=float(input("digite um numero"))
b=float(input("digite um numero"))
c=float(input("digite um num"))
total=(a^2+b^2+c^2/a+b+C)
print(round( total,7))
-- EXECUTION TIME:
0.156511
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/1800/main.py", line 4, in <module>
    total=(a^2+b^2+c^2/a+b+C)
TypeError: unsupported operand type(s) for ^: 'float' and 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 16:07:55) 
-- CODE:
a=float(input("digite um numero"))
b=float(input("digite um numero"))
c=float(input("digite um num"))
total1=(a^2+b^2+c^2)
total2=(a+b+C)
print(round( total1/total2,7))
-- EXECUTION TIME:
0.216217
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/1800/main.py", line 4, in <module>
    total1=(a^2+b^2+c^2)
TypeError: unsupported operand type(s) for ^: 'float' and 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 16:11:11) 
-- CODE:
a=float(input("digite um numero"))
b=float(input("digite um numero"))
c=float(input("digite um num"))
total1=(a**2+b**2+c**2)
total2=(a+b+C)
print(round( total1/total2,7))
-- EXECUTION TIME:
0.15255
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/1800/main.py", line 5, in <module>
    total2=(a+b+C)
NameError: name 'C' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 16:11:29) 
-- CODE:
a=float(input("digite um numero"))
b=float(input("digite um numero"))
c=float(input("digite um num"))
total1=(a**2+b**2+c**2)
total2=(a+b+C)
print(round( total1/total2,7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total2=(a+b+C)
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 16:12:18) 
-- CODE:
a=float(input("digite um numero"))
b=float(input("digite um numero"))
c=float(input("digite um num"))
total1=(a**2+b**2+c**2)/a+b+C
print(round( total1,7))
-- EXECUTION TIME:
0.169495
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/1800/main.py", line 4, in <module>
    total1=(a**2+b**2+c**2)/a+b+C
NameError: name 'C' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 16:12:31) 
-- CODE:
a=float(input("digite um numero"))
b=float(input("digite um numero"))
c=float(input("digite um num"))
total1=(a**2+b**2+c**2)/a+b+C
print(round( total1,7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total1=(a**2+b**2+c**2)/a+b+C
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 16:13:07) 
-- CODE:
a=float(input("digite um numero"))
b=float(input("digite um numero"))
c=float(input("digite um num"))
total1=(a**2+b**2+c**2)/a+b+c
print(round( total1,7))
-- EXECUTION TIME:
0.180186
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
151.25
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
2187.1276596
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
372.0444444
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 16:13:17) 
-- CODE:
a=float(input("digite um numero"))
b=float(input("digite um numero"))
c=float(input("digite um num"))
total1=(a**2+b**2+c**2)/a+b+c
print(round( total1,7))
-- EXECUTION TIME:
0.208091
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
151.25
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
2187.1276596
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
372.0444444
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 16:13:26) 
-- CODE:
a=float(input("digite um numero"))
b=float(input("digite um numero"))
c=float(input("digite um num"))
total1=(a**2+b**2+c**2)/a+b+c
print(round( total1,7))
-- OUTPUT:
151.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 16:13:47) 
-- CODE:
a=float(input("digite um numero"))
b=float(input("digite um numero"))
c=float(input("digite um num"))
total1=(a**2+b**2+c**2)/a+b+c
print(round( total1,7))
-- EXECUTION TIME:
0.202399
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
151.25
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
2187.1276596
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
372.0444444
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 16:14:19) 
-- CODE:
a=float(input("digite um numero"))
b=float(input("digite um numero"))
c=float(input("digite um num"))
total1=(a**2+b**2+c**2)/a+b+c
print(round( total1,7))
-- OUTPUT:
151.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 16:14:52) 
-- CODE:
a=float(input("digite um numero"))
b=float(input("digite um numero"))
c=float(input("digite um num"))
total1=(a**2+b**2+c**2)/a+b+c
print(round(total1,7))
-- EXECUTION TIME:
0.126328
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
151.25
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
2187.1276596
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
372.0444444
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 16:15:09) 
-- CODE:
a=float(input("digite um numero"))
b=float(input("digite um numero"))
c=float(input("digite um num"))
total1=(a**2+b**2+c**2)/a+b+c
print(round(total1,7))
-- OUTPUT:
151.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:05:11) 
-- CODE:
a=float(input("digite um numero"))
b=float(input("digite um numero"))
c=float(input("digite um num"))
condicao=(a+b+c)#0
total1=(a**2+b**2+c**2)/a+b+c
print(round(total1,7))
-- EXECUTION TIME:
0.22639
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
151.25
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
2187.1276596
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
372.0444444
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:05:48) 
-- CODE:
a=float(input("digite um numero"))
b=float(input("digite um numero"))
c=float(input("digite um numo"))
condicao=(a+b+c)#0
total1=(a**2+b**2+c**2)/(a+b+c)
print(round(total1,7))
-- EXECUTION TIME:
0.140292
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:06:06) 
-- CODE:
a=float(input("digite um numero"))
b=float(input("digite um numero"))
c=float(input("digite um numero"))
condicao=(a+b+c)#0
total1=(a**2+b**2+c**2)/(a+b+c)
print(round(total1,7))
-- EXECUTION TIME:
0.126484
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
digite um numerodigite um numerodigite um numero106.1509434
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:06:24) 
-- CODE:
a=float(input("digite um numero"))
b=float(input("digite um numero"))
c=float(input("digite um numero"))
condicao=(a+b+c)#0
total1=(a**2+b**2+c**2)/(a+b+c)
print(round(total1,7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:06:42) 
-- CODE:
a=float(input("digite um numero"))
b=float(input("digite um numero"))
c=float(input("digite um numero"))
condicao=(a+b+c)#0
total1=(a**2+b**2+c**2)/(a+b+c)
print(round(total1,7))
-- EXECUTION TIME:
0.224002
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
